=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.2
 - Fixed Text media items not being displayed properly with Lightbox. (windmillway) 
 - Fixed [ 2789308 ] ERROR 8: Constant PGV_GOOGLE_ANALYTICS already defined (fisharebest)
 - Fixed Errors on Album page and Reorder Media page highlighted by introduction of PDO parameters (windmillway)
 - Added Comment field to "Banned by IP" and "Search engine by IP" lists on Manage Servers page (canajun2eh)
 - Fixed [ 2779222 ] Adding a wrong date destroys all individual lists (fisharebest)
 - Fixed [ 2780483 ] nick name ordering error/mess (fisharebest)
 - Fixed [ 2780414 ] Clippings Cart MySQL Error (fisharebest)
 - Fixed [ 2774786 ] [G Map Module] GOverviewMapControl Defaults to Empty Display (wooc)
 - Fixed [ 1694445 ] SVN 1593: Individual Report, Text align (wooc)
 - Added [ 2671412 ] Link to Statistics Charts from GEDCOM Statistics Block (wooc)
 - Fixed [ 2734393 ] Review Changes Diff for Appended fails (fisharebest)

Version 4.2.1 2009-04-05
 - Fixed: [ 2730614 ] SVN 5320: Media Upload fails (canajun2eh)
 - Fixed: [ 2595714 ] Truncated first letter of thumb name if non-ASCII character (fisharebest)
 - Added: Cemetery report (canajun2eh)
 - Fixed: [ 2721892 ] Media Viewer ignores "Hide file name" config option (canajun2eh)
 - Fixed: [ 2702565 ] [4.2-4.2.5241] autocomplete not working when accented charac (wooc)
 - Added: Make Autocomplete an option in the GEDCOM config, Edit section (canajun2eh)
 - Fixed: [ 2634211 ] [4.2]+[4.1.6] Individual Add(ed) Facts not stored (fisharebest)
 - Fixed: [ 2604802 ] In the "Find Place" link the "Display all" list doesn't show (wooc)
 - Fixed: [ 2711647 ] Privacy option changes not working (canajun2eh)